# SplayLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  License-glad.md  README.md  SplayLibrary.sln
doc/: doxyfilerc
examples/: main.cpp  main.hpp
examples/advancedLighting/: advancedLighting.cpp
examples/advancedLighting/resources/shaders/: main.frag  secondPass.frag
examples/basicPhong/: basicPhong.cpp
examples/basicPhong/resources/shaders/: main.frag  main.vert
examples/resources/shaders/: main.frag  main.vert
examples/shaders/: main.vert
include/SplayLibrary/: Event.hpp  Glsl.hpp  GlslT.hpp  Mesh.hpp  Private.hpp  RenderWindow.hpp  Shader.hpp  SplayLibrary.hpp  SplayLibraryDecl.hpp  SplayLibraryTypes.hpp  Transformable.hpp  types.hpp
include/SplayLibrary/3D/: 3D.hpp  3DDecl.hpp  3DTypes.hpp  Mesh.hpp  MeshT.hpp  PerspectiveCamera.hpp  Transformable3D.hpp  types.hpp
include/SplayLibrary/3D/template/: Mesh.hpp
include/SplayLibrary/3D/templates/: Mesh.hpp
include/SplayLibrary/Core/: Buffer.hpp  Context.hpp  ContextManager.hpp  Core.hpp  CoreDecl.hpp  CoreTypes.hpp  DefaultFramebuffer.hpp  Drawable.hpp  Event.hpp  Framebuffer.hpp  FramebufferAttachable.hpp  Glsl.hpp  GlslT.hpp  Private.hpp  RawTexture.hpp  RawTexture2D.hpp  RenderWindow.hpp  Renderbuffer.hpp  Sampler.hpp  Shader.hpp  ShaderModule.hpp  ShaderPipeline.hpp  ShaderProgram.hpp  Texture.hpp  Texture2D.hpp  Texture2DT.hpp  TextureBase.hpp  Transformable.hpp  VertexArray.hpp  Window.hpp  WindowFramebuffer.hpp  types.hpp
include/SplayLibrary/Core/Texture/: Texture2D.hpp  TextureBase.hpp
include/SplayLibrary/Core/Texture/templates/: Texture2D.hpp  TextureBase.hpp
include/SplayLibrary/Core/template/: Framebuffer.hpp  Shader.hpp  Texture2D.hpp  TextureBase.hpp
include/SplayLibrary/Core/templates/: Buffer.hpp  Framebuffer.hpp  Shader.hpp  ShaderProgram.hpp
include/SplayLibrary/Private/: Private.hpp  PrivateIncluded.hpp  PrivateNotIncluded.hpp
include/SplayLibrary/Private/templates/: Private.hpp  PrivateIncluded.hpp  PrivateNotIncluded.hpp
lib/: SplayLibrary-Debug-Win32.lib  SplayLibrary-Debug-x64.lib  SplayLibrary-Release-Win32.lib  SplayLibrary-Release-x64.lib
src/Core/: Context.cpp  Framebuffer.cpp  FramebufferAttachable.cpp  ShaderModule.cpp  Texture.cpp  VertexArray.cpp  Window.cpp
src/SplayLibrary/: Glsl.cpp  RenderWindow.cpp  Shader.cpp
src/SplayLibrary/3D/: Mesh.cpp  PerspectiveCamera.cpp  Transformable3D.cpp
src/SplayLibrary/Core/: Buffer.cpp  Context.cpp  ContextManager.cpp  DefaultFramebuffer.cpp  Drawable.cpp  Framebuffer.cpp  Glsl.cpp  RawTexture.cpp  RawTexture2D.cpp  RenderWindow.cpp  Renderbuffer.cpp  Sampler.cpp  Shader.cpp  ShaderModule.cpp  ShaderProgram.cpp  Texture.cpp  Texture2D.cpp  TextureBase.cpp  Transformable.cpp  VertexArray.cpp  Window.cpp  WindowFramebuffer.cpp
src/SplayLibrary/Core/Texture/: Texture2D.cpp  TextureBase.cpp
src/SplayLibrary/Core/glad/: glad.cpp
src/glad/: glad.c
vs/SplayLibrary/: SplayLibrary.vcxproj  SplayLibrary.vcxproj.filters
vs/SplayLibraryExamples/: SplayLibraryExamples.vcxproj  SplayLibraryExamples.vcxproj.filters
